# otf2-sys-rs

./: Cargo.toml  rust-toolchain.toml
otf2/: Cargo.toml
otf2-sys/: Cargo.toml
otf2-sys/src/: attribute.rs  c.rs  error.rs  handle.rs  lib.rs  macros.rs  print_defs.rs  reader.rs  traits.rs
otf2-sys/src/attribute/: mod.rs  parse.rs
otf2-sys/src/definition/: attribute.rs  defs.rs  global_reader_callbacks.rs  location.rs  mod.rs  visitor.rs
otf2-sys/src/event/: event_struct.rs  global_reader_callbacks.rs  mod.rs  print_events.rs  visitor.rs
src/: archive.rs  c.rs  definition.rs  error.rs  handle.rs  lib.rs  print_defs.rs  reader.rs
src/definition/: attribute.rs  string.rs  visitor.rs
src/event/: mod.rs  print_events.rs  visitor.rs
