[package]
name = "otf2-sys-rs"
version = "0.1.0"
edition = "2024"
build = "build/main.rs"

[build-dependencies]
directories = "6.0.0"
autotools = "0.2.7"
bindgen = "0.72.0"
fetch-source = { path = "/home/adam/git/cargo-fetch-source/fetch-source", features = ["rayon", "tar"]}

[dependencies]
derive_builder = "0.20.2"
thiserror = "2.0.12"

[package.metadata.fetch-source]
"otf2::3.0" = { tar = "https://zenodo.org/records/5883792/files/otf2-3.0.tar.gz" }
